--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.15.0",
     "react-dom": "^19.1.1",
-    "react": "^19.1.1",
-    "recharts": "^3.1.2"
+    "react": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
