--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
-    "react-dom": "^19.1.1",
-    "react": "^19.1.1"
+    "react-dom": "^18.3.1",
+    "react": "^18.3.1",
+    "@tanstack/react-query": "5.51.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
