--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^18.3.1",
-    "react": "^18.3.1",
+    "sentiment": "latest",
     "@tanstack/react-query": "5.51.1",
     "@tanstack/react-virtual": "3.8.0",
-    "sentiment": "5.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
